force-app/main/default/objects/OrderItem/fields/Fulfillable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Fulfillable_Quantity__c</fullName>
    <label>Fulfillable Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>