force-app/main/default/objects/OrderItem/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <label>Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fulfilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>