force-app/main/default/objects/OrderItem/fields/Grams__c.field-meta.xml
<CustomField>
    <fullName>Grams__c</fullName>
    <label>Grams</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>