force-app/main/default/objects/OrderItem/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <formula>Product2.ProductGroupName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>