force-app/main/default/objects/OrderItem/fields/Requires_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Requires_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Shipping</label>
    <type>Checkbox</type>
</CustomField>